package es.tiernoparla.daw.mercadaw.model.entity.interfaces;
/**
 * Esta clase sirve para identificar los objetos gestionables por la interfaz MercaDAW.
 * Basada en el marker interface pattern.
 */
public interface Gestionable {
    
}
