package es.tiernoparla.daw.mercadaw.model.entity.persona.empleado;
/**
 * Esta clase representa una categoría de Empleado con distintos atributos.
 */
public class Cajero extends Empleado {

    public Cajero(String nombre, String apellidos, int id, String categoria, int sueldo) {
        
        super(nombre, apellidos, id, categoria, sueldo);
        
    }
    
}
