package es.tiernoparla.daw.mercadaw.model.entity.persona.empleado;

/**
 * Esta clase representa una categoría de Empleado con distintos atributos.
 */
public class Reponedor extends Empleado{

    public Reponedor(String nombre, String apellidos, int id, String categoria, int sueldo) {
        
        super(nombre, apellidos, id, categoria, sueldo);
        
    }

}
