package es.tiernoparla.daw.mercadaw.model.entity.producto;

/**
 * Esta clase representa el estado de los objetos de tipo Cosmetica.
 */
public class Cosmetica extends Producto{

    public Cosmetica(String nombre, String marca, double precio, Caracteristica caracteristica, String descripcion, String categoria) {

        super(nombre, marca, precio, caracteristica, descripcion, categoria);
        
    }

}
